[gd_scene load_steps=29 format=3 uid="uid://8sw2nycycfo1"]

[ext_resource type="Script" path="res://Scenes/PantallaAyuda/Scrpt_PantallaAyuda.gd" id="1_n3qnp"]
[ext_resource type="Texture2D" uid="uid://dh8udtt6qda6p" path="res://Assets/IMG_Pantallas/PantallaAyuda.jpg" id="2_jec3b"]
[ext_resource type="FontFile" uid="uid://ca7fwybyve5qb" path="res://Assets/Fonts/ARIALBD.TTF" id="3_iykjd"]
[ext_resource type="FontFile" uid="uid://bpmafq01liqvp" path="res://Assets/Fonts/nulshock bd.otf" id="3_wuw1w"]
[ext_resource type="Texture2D" uid="uid://dchpnfxrwlnr2" path="res://Assets/IMG_Templates/Template_Stakeholder.png" id="4_4vg6i"]
[ext_resource type="Texture2D" uid="uid://b3ak2iqhclma2" path="res://Assets/IMG/Pregunta/Q00.jpg" id="5_avt3x"]
[ext_resource type="Texture2D" uid="uid://cae2fsqi7wf01" path="res://Assets/IMG_Templates/Template_Stakeholder_P.png" id="6_kjny3"]
[ext_resource type="Texture2D" uid="uid://fg6li552oj4w" path="res://Assets/IMG_UI/Calendario.png" id="6_umjxc"]
[ext_resource type="Texture2D" uid="uid://bg6bo88i5g4d2" path="res://Assets/IMG_UI/Presupuesto.png" id="7_8w3to"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ww7b4"]
content_margin_left = 180.0
content_margin_top = 50.0
content_margin_right = 180.0
content_margin_bottom = 50.0
bg_color = Color(0.393085, 0.393086, 0.393085, 0.878431)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ik0w5"]
content_margin_left = 400.0
content_margin_top = 100.0
content_margin_right = 100.0
content_margin_bottom = 100.0
bg_color = Color(0.393085, 0.393086, 0.393085, 0.878431)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ve23h"]
size = Vector2(1080, 1920)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_akwga"]
content_margin_left = 40.0
content_margin_top = 70.0
content_margin_right = 40.0
content_margin_bottom = 70.0
bg_color = Color(0, 0, 0, 0.823529)
corner_radius_top_left = 80
corner_radius_top_right = 80
corner_radius_bottom_right = 80
corner_radius_bottom_left = 80

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_64827"]
content_margin_left = 400.0
content_margin_top = 100.0
content_margin_right = 100.0
content_margin_bottom = 100.0
bg_color = Color(0.393085, 0.393086, 0.393085, 0.878431)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sgtlh"]
content_margin_left = 460.0
content_margin_top = 100.0
content_margin_right = 100.0
content_margin_bottom = 100.0
bg_color = Color(0.393085, 0.393086, 0.393085, 0.878431)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gst5x"]
content_margin_left = 460.0
content_margin_top = 100.0
content_margin_right = 100.0
content_margin_bottom = 100.0
bg_color = Color(0.393085, 0.393086, 0.393085, 0.878431)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qmh72"]
bg_color = Color(0, 0.470588, 0.470588, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0.392157, 0.392157, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yvmeg"]
bg_color = Color(0, 0.392157, 0.392157, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0.313726, 0.313726, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8gsgy"]
bg_color = Color(0, 0.313726, 0.313726, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0.235294, 0.235294, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c2vax"]
bg_color = Color(0, 0.313726, 0.313726, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0.235294, 0.235294, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wwuye"]
bg_color = Color(0, 0.470588, 0.470588, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0.392157, 0.392157, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_evk2r"]
bg_color = Color(0, 0.392157, 0.392157, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0.313726, 0.313726, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b5s3o"]
bg_color = Color(0, 0.313726, 0.313726, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0.235294, 0.235294, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f3f5k"]
bg_color = Color(0, 0.313726, 0.313726, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0.235294, 0.235294, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bkpxj"]
bg_color = Color(0, 0.470588, 0.470588, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0.392157, 0.392157, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4jxd2"]
bg_color = Color(0, 0.392157, 0.392157, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0.313726, 0.313726, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k70u2"]
bg_color = Color(0, 0.313726, 0.313726, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0.235294, 0.235294, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e3y4d"]
bg_color = Color(0, 0.313726, 0.313726, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0.235294, 0.235294, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="ScAyuda" type="Node2D"]
script = ExtResource("1_n3qnp")

[node name="BG" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_jec3b")

[node name="Ayuda_Pagina1" type="Label" parent="."]
offset_left = 64.0
offset_top = 64.0
offset_right = 1856.0
offset_bottom = 896.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_iykjd")
theme_override_font_sizes/font_size = 70
theme_override_styles/normal = SubResource("StyleBoxFlat_ww7b4")
text = "Bienvenido a Req Duel! Este juego tiene como finalidad aplicar los conceptos de Ingeniería de Requisitos, presentandote distintos escenarios donde tú tomaras el rol de Ingeniero de Requisitos..."
horizontal_alignment = 3
vertical_alignment = 1
autowrap_mode = 2

[node name="Ayuda_Pagina2" type="Label" parent="."]
visible = false
offset_left = 64.0
offset_top = 64.0
offset_right = 1856.0
offset_bottom = 896.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_iykjd")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_ik0w5")
text = "Tu rol como ingeniero de Requisitos será atender las distintas necesidades de las personas o entidades en juego, llamadas \"Stakeholders\", las cuales te dirán qué necesitan al colocar el cursor sobre ellas (¡Inténtalo!), esta necesidad debe ser resuelta antes que el \"Stakeholder\" se enfade y el proyecto fracase, esto lo indica su nivel de paciencia, el número al centro de la carta que indica cuantos turnos tienes para resolver su problema..."
horizontal_alignment = 3
vertical_alignment = 1
autowrap_mode = 3

[node name="Ejemplo_Normal" type="Sprite2D" parent="Ayuda_Pagina2"]
z_index = 1
position = Vector2(192, 416)
scale = Vector2(0.296296, 0.3)
texture = ExtResource("4_4vg6i")

[node name="Hitbox" type="Area2D" parent="Ayuda_Pagina2/Ejemplo_Normal"]

[node name="Colision" type="CollisionShape2D" parent="Ayuda_Pagina2/Ejemplo_Normal/Hitbox"]
visible = false
position = Vector2(0, -0.00012207)
shape = SubResource("RectangleShape2D_ve23h")

[node name="Image" type="Sprite2D" parent="Ayuda_Pagina2/Ejemplo_Normal"]
z_index = -1
position = Vector2(-3.05176e-05, -386.667)
scale = Vector2(1.03378, 1.05105)
texture = ExtResource("5_avt3x")

[node name="Cost" type="Label" parent="Ayuda_Pagina2/Ejemplo_Normal"]
offset_left = -216.0
offset_top = 53.0
offset_right = 216.0
offset_bottom = 240.0
theme_override_font_sizes/font_size = 120
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name" type="Label" parent="Ayuda_Pagina2/Ejemplo_Normal"]
offset_left = -405.0
offset_top = 267.0
offset_right = 405.0
offset_bottom = 800.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 120
text = "Usuarios Furiosos"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Description" type="Label" parent="Ayuda_Pagina2/Ejemplo_Normal"]
visible = false
offset_left = -540.0
offset_top = -960.0
offset_right = 540.0
offset_bottom = 960.0
theme_override_font_sizes/font_size = 120
theme_override_styles/normal = SubResource("StyleBoxFlat_akwga")
text = "¡Resuleve nuestro problema, y pronto!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Ayuda_Pagina3" type="Label" parent="."]
visible = false
offset_left = 64.0
offset_top = 64.0
offset_right = 1856.0
offset_bottom = 896.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_iykjd")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_64827")
text = "¡Pero cuidado!, ya que algunas soluciones solo resuelven de forma parcial su problema, por lo tanto deberás darle mas soluciones para satisfacerlo, o el \"Stakeholder\" seguirá en juego y su paciencia disminuirá. (Pista: Encuentra la forma de entregarles soluciones inmediatas)"
horizontal_alignment = 3
vertical_alignment = 1
autowrap_mode = 3

[node name="Ejemplo_Parcial" type="Sprite2D" parent="Ayuda_Pagina3"]
z_index = 1
position = Vector2(192, 416)
scale = Vector2(0.296296, 0.3)
texture = ExtResource("6_kjny3")

[node name="Hitbox" type="Area2D" parent="Ayuda_Pagina3/Ejemplo_Parcial"]

[node name="Colision" type="CollisionShape2D" parent="Ayuda_Pagina3/Ejemplo_Parcial/Hitbox"]
visible = false
position = Vector2(0, -0.00012207)
shape = SubResource("RectangleShape2D_ve23h")

[node name="Image" type="Sprite2D" parent="Ayuda_Pagina3/Ejemplo_Parcial"]
z_index = -1
position = Vector2(-3.05176e-05, -386.667)
scale = Vector2(1.03378, 1.05105)
texture = ExtResource("5_avt3x")

[node name="Cost" type="Label" parent="Ayuda_Pagina3/Ejemplo_Parcial"]
offset_left = -216.0
offset_top = 53.0
offset_right = 216.0
offset_bottom = 240.0
theme_override_font_sizes/font_size = 120
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name" type="Label" parent="Ayuda_Pagina3/Ejemplo_Parcial"]
offset_left = -405.0
offset_top = 267.0
offset_right = 405.0
offset_bottom = 800.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 120
text = "Usuarios Furiosos"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Description" type="Label" parent="Ayuda_Pagina3/Ejemplo_Parcial"]
visible = false
offset_left = -540.0
offset_top = -960.0
offset_right = 540.0
offset_bottom = 960.0
theme_override_font_sizes/font_size = 120
theme_override_styles/normal = SubResource("StyleBoxFlat_akwga")
text = "¡Resuleve nuestro problema, y pronto!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Ayuda_Pagina4" type="Label" parent="."]
visible = false
offset_left = 64.0
offset_top = 64.0
offset_right = 1856.0
offset_bottom = 896.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_iykjd")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_sgtlh")
text = "Este es tu calendario, indica el día (o turno) en el que te encuentres, cada vez que pase un turno, además de reducir la paciencia de los \"Stakeholder\" en juego, el calendario avanza, tu meta es llegar al día 10 con la mayor cantidad de \"Stakeholders\" satisfechos"
horizontal_alignment = 3
vertical_alignment = 1
autowrap_mode = 3

[node name="Calendario" type="TextureRect" parent="Ayuda_Pagina4"]
layout_mode = 0
offset_left = 80.0
offset_top = 240.0
offset_right = 432.0
offset_bottom = 592.0
texture = ExtResource("6_umjxc")
expand_mode = 1

[node name="Dia 1" type="Label" parent="Ayuda_Pagina4/Calendario"]
layout_mode = 0
offset_left = 40.0
offset_top = 32.0
offset_right = 298.0
offset_bottom = 277.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_wuw1w")
theme_override_font_sizes/font_size = 100
text = "Día
1"
horizontal_alignment = 1

[node name="Ayuda_Pagina5" type="Label" parent="."]
visible = false
offset_left = 64.0
offset_top = 64.0
offset_right = 1856.0
offset_bottom = 896.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_iykjd")
theme_override_font_sizes/font_size = 60
theme_override_styles/normal = SubResource("StyleBoxFlat_gst5x")
text = "Y para terminar, este es tu presupuesto, cada carta de solución tiene un costo, deberás manejar tu presupuesto para poder sobrevivir los 10 días del proyecto."
horizontal_alignment = 3
vertical_alignment = 1
autowrap_mode = 3

[node name="Presupuesto" type="TextureRect" parent="Ayuda_Pagina5"]
layout_mode = 0
offset_left = 48.0
offset_top = 288.0
offset_right = 432.0
offset_bottom = 544.0
texture = ExtResource("7_8w3to")
expand_mode = 1

[node name="1_10" type="Label" parent="Ayuda_Pagina5/Presupuesto"]
layout_mode = 0
offset_left = 16.0
offset_top = 136.0
offset_right = 292.0
offset_bottom = 216.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_wuw1w")
theme_override_font_sizes/font_size = 60
text = "$10/$10"

[node name="Ayuda_Pagina6" type="Label" parent="."]
visible = false
offset_left = 64.0
offset_top = 64.0
offset_right = 1856.0
offset_bottom = 896.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_wuw1w")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxFlat_ww7b4")
text = "¡BUENA SUERTE!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="BtnPrevPage" type="Button" parent="."]
offset_left = 256.0
offset_top = 920.0
offset_right = 640.0
offset_bottom = 1048.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.501961, 0.501961, 0.501961, 1)
theme_override_colors/font_hover_color = Color(0.752941, 0.752941, 0.752941, 1)
theme_override_colors/font_focus_color = Color(0.501961, 0.501961, 0.501961, 1)
theme_override_fonts/font = ExtResource("3_wuw1w")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_qmh72")
theme_override_styles/hover = SubResource("StyleBoxFlat_yvmeg")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8gsgy")
theme_override_styles/focus = SubResource("StyleBoxFlat_c2vax")
text = "«««"

[node name="BtnMenu" type="Button" parent="."]
offset_left = 848.0
offset_top = 920.0
offset_right = 1072.0
offset_bottom = 1048.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.501961, 0.501961, 0.501961, 1)
theme_override_colors/font_hover_color = Color(0.752941, 0.752941, 0.752941, 1)
theme_override_colors/font_focus_color = Color(0.501961, 0.501961, 0.501961, 1)
theme_override_fonts/font = ExtResource("3_wuw1w")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_wwuye")
theme_override_styles/hover = SubResource("StyleBoxFlat_evk2r")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b5s3o")
theme_override_styles/focus = SubResource("StyleBoxFlat_f3f5k")
text = "Volver"

[node name="BtnNextPage" type="Button" parent="."]
offset_left = 1280.0
offset_top = 920.0
offset_right = 1664.0
offset_bottom = 1048.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.501961, 0.501961, 0.501961, 1)
theme_override_colors/font_hover_color = Color(0.752941, 0.752941, 0.752941, 1)
theme_override_colors/font_focus_color = Color(0.501961, 0.501961, 0.501961, 1)
theme_override_fonts/font = ExtResource("3_wuw1w")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_bkpxj")
theme_override_styles/hover = SubResource("StyleBoxFlat_4jxd2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_k70u2")
theme_override_styles/focus = SubResource("StyleBoxFlat_e3y4d")
text = "»»»"

[connection signal="mouse_entered" from="Ayuda_Pagina2/Ejemplo_Normal/Hitbox" to="." method="_on_hitbox_mouse_entered"]
[connection signal="mouse_exited" from="Ayuda_Pagina2/Ejemplo_Normal/Hitbox" to="." method="_on_hitbox_mouse_exited"]
[connection signal="mouse_entered" from="Ayuda_Pagina3/Ejemplo_Parcial/Hitbox" to="." method="_on_hitbox_mouse_entered"]
[connection signal="mouse_exited" from="Ayuda_Pagina3/Ejemplo_Parcial/Hitbox" to="." method="_on_hitbox_mouse_exited"]
[connection signal="pressed" from="BtnPrevPage" to="." method="_on_btn_prev_page_pressed"]
[connection signal="pressed" from="BtnMenu" to="." method="_on_btn_menu_pressed"]
[connection signal="pressed" from="BtnNextPage" to="." method="_on_btn_next_page_pressed"]
